# zk-mooc-halo2

./: Cargo.toml  README.md
benchmarking/: Cargo.toml
benchmarking/src/: blake2f_circuit_bench.rs  constants.rs  lib.rs  ripemd160_circuit_bench.rs  sha2_256_circuit_bench.rs
blake2f-circuit/: Cargo.toml
blake2f-circuit/src/: lib.rs
examples/: Cargo.toml
examples/src/: lib.rs  residue_pattern.rs
ripemd160-circuit/: Cargo.toml
ripemd160-circuit/src/: lib.rs
sha2-256-circuit/: Cargo.toml
sha2-256-circuit/src/: lib.rs
src/: lib.rs
